@@ -8,9 +8,41 @@
   <url>https://firmador.libre.cr</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dss.version>5.10.1</dss.version>
+    <dss.version>5.11.RC1</dss.version>
     <slf4j.version>1.7.36</slf4j.version>
   </properties>
+  <profiles>
+	  <profile>
+		  <activation>
+			  <jdk>9</jdk>
+		  </activation>
+		  <build>
+			  <plugins>
+				  <plugin>
+					  <artifactId>maven-compiler-plugin</artifactId>
+					  <configuration>
+					    <compilerArgs>
+					        <arg>--add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>
+					    </compilerArgs>
+					    <fork>true</fork>
+				    </configuration>
+				  </plugin>
+				  <plugin>
+					  <artifactId>maven-surefire-plugin</artifactId>
+					  <configuration>
+					      <argLine>--add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</argLine>
+					  </configuration>
+				  </plugin>
+				  <plugin>
+					  <artifactId>maven-failsafe-plugin</artifactId>
+					  <configuration>
+					      <argLine>--add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</argLine>
+					  </configuration>
+				  </plugin>
+			  </plugins>
+		  </build>
+	  </profile>
+  </profiles>
   <build>
     <finalName>${project.artifactId}</finalName>
     <plugins>
@@ -118,11 +150,6 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>org.apache.pdfbox</groupId>
-      <artifactId>pdfbox</artifactId>
-      <version>2.0.26</version><!--$NO-MVN-MAN-VER$-->
-    </dependency>
-    <dependency>
       <groupId>eu.europa.ec.joinup.sd-dss</groupId>
       <artifactId>dss-pades-pdfbox</artifactId>
       <exclusions>
@@ -165,11 +192,6 @@
       <version>5.2.2</version>
     </dependency>
 -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version><!--$NO-MVN-MAN-VER$-->
-    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jcl</artifactId>
